--- a/iOS Level 2/Base.lproj/Main.storyboard
+++ b/iOS Level 2/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Auth-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="Auth" customModule="GeekBrainsLesson2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="Auth" customModule="iOS_Level_2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -158,47 +158,6 @@
             </objects>
             <point key="canvasLocation" x="128.80000000000001" y="160.56971514242881"/>
         </scene>
-        <!--Item 2-->
-        <scene sceneID="Y2S-7W-2cG">
-            <objects>
-                <viewController id="vqQ-ai-rdD" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="9vP-Dd-7Ft">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="WyM-vB-ngv"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="8cc-N2-DOK"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="U3o-yi-Cbx" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1928" y="488"/>
-        </scene>
-        <!--Item 1-->
-        <scene sceneID="UWX-qP-I2r">
-            <objects>
-                <viewController id="dlq-5G-BAu" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="aEn-O1-Mle">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pvu-a6-ktf">
-                                <rect key="frame" x="169" y="260" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="4mt-Ps-PVA"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="AoC-WL-x7m"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jtl-T6-5FS" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1928" y="-171"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Qa4-lZ-mAC">
             <objects>
@@ -209,13 +168,174 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="dlq-5G-BAu" kind="relationship" relationship="viewControllers" id="abK-J3-rgE"/>
-                        <segue destination="vqQ-ai-rdD" kind="relationship" relationship="viewControllers" id="6h5-AE-vbH"/>
+                        <segue destination="yuc-YE-9lG" kind="relationship" relationship="viewControllers" id="aZy-Ye-YdE"/>
+                        <segue destination="kag-cY-DCt" kind="relationship" relationship="viewControllers" id="Xjt-IZ-uUD"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f0c-y2-Ywv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1011" y="159"/>
         </scene>
+        <!--Menu-->
+        <scene sceneID="Ntq-2f-9g4">
+            <objects>
+                <tableViewController id="VSS-06-75t" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7Ey-Fj-jZi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <sections>
+                            <tableViewSection id="ZV9-6s-YGZ">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="9mZ-zE-CCE">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9mZ-zE-CCE" id="5ig-yZ-MX7">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Sc-D5-7dU">
+                                                    <rect key="frame" x="167" y="6" width="80" height="33.666666666666664"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="7Sc-D5-7dU" firstAttribute="leading" secondItem="5ig-yZ-MX7" secondAttribute="leading" constant="167" id="9uf-V4-RyR"/>
+                                                <constraint firstAttribute="trailing" secondItem="7Sc-D5-7dU" secondAttribute="trailing" constant="167" id="GRp-YJ-99s"/>
+                                                <constraint firstItem="7Sc-D5-7dU" firstAttribute="top" secondItem="5ig-yZ-MX7" secondAttribute="top" constant="6" id="ke3-rW-D8d"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="UCB-hk-pBQ" kind="show" id="Edo-N7-gMx"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="VSS-06-75t" id="3t1-G5-uxs"/>
+                            <outlet property="delegate" destination="VSS-06-75t" id="cEk-6c-rf4"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Menu" id="YHR-TJ-UNf">
+                        <barButtonItem key="leftBarButtonItem" title="Log Out" style="plain" id="KCK-p5-7jJ">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="presentation" id="9mg-9x-HNu"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SBf-Dl-bMl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2944.9275362318845" y="-360.32608695652175"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="iZc-Nd-Ms3">
+            <objects>
+                <collectionViewController id="UCB-hk-pBQ" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="jhw-3f-h4Q">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LZF-Ut-3jA">
+                            <size key="itemSize" width="107" height="85"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="vxZ-Lu-MJX">
+                                <rect key="frame" x="0.0" y="0.0" width="107" height="85"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="107" height="85"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="UCB-hk-pBQ" id="HW1-4h-hwr"/>
+                            <outlet property="delegate" destination="UCB-hk-pBQ" id="PdY-Ba-fj5"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S1w-H4-vyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3802.898550724638" y="-362.77173913043481"/>
+        </scene>
+        <!--Setting-->
+        <scene sceneID="P4I-41-xD6">
+            <objects>
+                <tableViewController id="N3e-i8-mRw" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="zSL-DC-KXp">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="9N9-v7-Rsy">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9N9-v7-Rsy" id="pZ1-QP-E5S">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="N3e-i8-mRw" id="jLn-FN-cOe"/>
+                            <outlet property="delegate" destination="N3e-i8-mRw" id="wHC-gK-0j1"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Setting" id="J6F-AG-FXQ">
+                        <barButtonItem key="leftBarButtonItem" title="Log Out" style="plain" id="t3o-5G-3dN">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="presentation" id="DYo-E6-Jlx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SVL-h1-dOi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2945" y="746"/>
+        </scene>
+        <!--Setting-->
+        <scene sceneID="Nvc-tZ-uY3">
+            <objects>
+                <navigationController id="kag-cY-DCt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Setting" id="MDH-ag-2Yl"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="py2-A9-Luc">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="N3e-i8-mRw" kind="relationship" relationship="rootViewController" id="ufA-Cx-cxo"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J12-ue-sdG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2025" y="746"/>
+        </scene>
+        <!--Menu-->
+        <scene sceneID="79l-Qh-D1D">
+            <objects>
+                <navigationController id="yuc-YE-9lG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Menu" id="vmw-ob-LNw"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YkY-yK-zWb">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="VSS-06-75t" kind="relationship" relationship="rootViewController" id="e5t-Rw-xxJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e6v-b6-CVZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2025" y="-360"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="9mg-9x-HNu"/>
+    </inferredMetricsTieBreakers>
 </document>
